# latexindent.pl

./: .appveyor.yml  .gitignore  .pre-commit-hooks.yaml  .travis.yml  CMakeLists.txt  Dockerfile  Latex.pm  Makefile.PL  add-to-path.bat  defaultSettings.yaml  environment.yml  indent.pl  indent.plx  indent.yaml  indentconfig.yaml  latexindent.pl  liscense.txt  localSettings.yaml  manual.tex  new-approach-oo.pl  new-approach.pl  ppp.pl  prepctan.sh  readme.md  readme.txt  readthedocs.yaml  sampleAFTER.tex  sampleBEFORE.tex  uninstall.bat  versionhistory.txt
.devcontainer/: Dockerfile
.github/: dependabot.yml  pull_request_template.md
LatexIndent/: .perltidyrc  AlignmentAtAmpersand.pm  Arguments.pm  BackUpFileProcedure.pm  Between.pm  BlankLine.pm  BlankLines.pm  Blocks.pm  Braces.pm  Check.pm  CmdLineArgsFileOperation.pm  Command.pm  CommandLineArgs.pm  Document.pm  DoubleBackSlash.pm  Element.pm  Else.pm  Environment.pm  File.pm  FileContents.pm  FileExtension.pm  FileOperation.pm  GetYamlSettings.pm  Grammar.pm  GroupOfItems.pm  GroupingBracesBrackets.pm  Heading.pm  HiddenChildren.pm  HorizontalWhiteSpace.pm  IfElseFi.pm  Indent.pm  Item.pm  KeyEqualsValuesBraces.pm  Lines.pm  Literal.pm  LogFile.pm  Logfile.pm  Logger.pm  MandatoryArgument.pm  ModifyLineBreaks.pm  (+16 more)
documentation/: Makefile  appendices.rst  appendices.tex  bashtips.txt  bibsettings.yaml  changelog.md  checklogfile.sh  cmhlistings.tex  conf.py  contributors.bib  convert-figures-to-png.sh  doc-indent.sh  figure-schematic.tex  (+67 more)
path-helper-files/: CMakeLists.txt  add-to-path.bat  remove-from-path.bat
(+6253 files in other folders)
